--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,16 @@
-spring.application.name=lariharumi
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL95Dialect
-spring.jpa.hibernate.ddl-auto=update
+# Configuração do PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/laricroche
+spring.datasource.username=postgres
+spring.datasource.password=postgres123
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Mostrar SQL no console (opcional)
 spring.jpa.show-sql=true
+
+# Opções de DDL (create, update, validate, none)
+spring.jpa.hibernate.ddl-auto=update
+
+api.security.token.secret=${JWT_SECRET}
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
