--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.show-sql=true
 # Opções de DDL (create, update, validate, none)
 spring.jpa.hibernate.ddl-auto=update
 
-api.security.token.secret=${JWT_SECRET}
+api.security.token.secret=APIlaricroche@API@SECRET
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
