--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Configuração do PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/laricroche
-spring.datasource.username=postgres
-spring.datasource.password=postgres123
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Mostrar SQL no console (opcional)
@@ -10,7 +10,7 @@ spring.jpa.show-sql=true
 # Opções de DDL (create, update, validate, none)
 spring.jpa.hibernate.ddl-auto=update
 
-api.security.token.secret=APIlaricroche@API@SECRET
+api.security.token.secret=${JWT_SECRET}
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
